--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ padding: 3px;
 }
 
 #alertBox {
-	position:relative;
+	position:absolute;
   width:43%;
   height: 25%;
 	min-height:100px;
@@ -373,11 +373,16 @@ padding: 3px;
 	background-color:#fff;
 	background-repeat:no-repeat;
   top:30%;
-  left: 500px;
+  left: 200px;
 }
 
 #modalContainer > #alertBox {
-  position:fixed;
+  position: absolute;
+    left: 10px;
+    top: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #alertBox h1 {
