--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@import "compass/css3";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,11 +17,16 @@ body {
   height: 100%;
 }
 
+.containerx {
+width: 100%;
+}
+
 section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .container {
@@ -34,7 +50,14 @@ section {
    justify-content: center;
    align-items: center;
    padding: 5px 0;
+   width: 70%;
+   left: 386px;
    top: 100px;
+   color: white;
+   background-color: sandybrown;
+   border-radius: 5px;
+   padding: 3px;
+   text-align: center;
 }
 .mt-5 {
   color: black;
@@ -53,8 +76,7 @@ section {
   margin: -150px 0 0 -150px;
   position: absolute;
   top: 370px;
-
-  width: 300px;
+  width: 65%;
 
 }
 
@@ -73,10 +95,9 @@ section {
   position: relative;
   top: 50%;
   width: 200px;
-
-  &:focus {
+}
+.input:focus {
     outline: none;
-  }
 }
 
 input::-webkit-input-placeholder {
@@ -146,40 +167,42 @@ font {
   text-align: center;
 }
 
- p {
+#time p {
   position: relative;
-  top: 450px;
+  top: 400px;
   left: 385px;
   color: white;
   background-color: sandybrown;
-  width: 300px;
+  width: 69%;
   border-radius: 5px;
   padding: 3px;
  }
 
 #timeLeft {
   position: relative;
-  top: 410px;
-  left: 330px;
+  top: 353px;
+  left: 350px;
   color: white;
+  font-size: 1.3em;
   background-color: sandybrown;
 }
 
 #sec {
   position: relative;
-  top: 55px;
-  left: 620px;
+  top: 52px;
+  left: 648px;
+  font-size: 1.3em;
   color: white;
   background-color: sandybrown;
   margin-right: 5px;
 }
-
+/* 
 .type {
   width: 60%;
   text-align: center;
   left: 374px;
  padding-right: 5px;
-}
+} */
 
 .secds {
   width: 15%;
@@ -213,9 +236,9 @@ b {
   position: relative;
   color: black;
   float: right;
-  right: 250px;
-  font-size:28px;
-  top: 410px;
+  left: 776px;
+  font-size: 28px;
+  top: 184px;
 }
 
 #playerN {
@@ -232,9 +255,6 @@ b {
   position: relative;
   left: -90px;
 }
-
-
-@import "compass/css3";
 
 /* .logo {
   position: absolute;
@@ -261,11 +281,17 @@ b {
 } */
 
 #messageP {
-  position: absolute;
-  top: 360px;
+  display: none;
+  position: relative;
+  top: -16px;
   width: 100px;
-  left: 280px;
+  left: -45px;
   text-align: center;
+  color: white;
+  background-color: sandybrown;
+  width: 112%;
+  border-radius: 5px;
+  padding: 3px;
 }
 
 .instructions {
@@ -275,17 +301,19 @@ b {
   align-items: center;
   background-color: #787f6a;
   width: 25%;
-  height: 350px;
+  height: 45%;
   color: white;
   position: absolute;
   left: 60px;
-  top: 260px;
+  top: 60px;
   margin: 5px;
   text-align: center;
   margin-bottom: 350px;
+  padding: 1em 2em;
 }
 
 .instructions p {
+  border: 1px solid #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -294,59 +322,136 @@ b {
   position: relative;
   left: 0px;
   top: 20px;
-  width: 1005;
+  width: 100%;
+  opacity: 0.8;
+  text-align: center;
+  height: 50%;
+}
+
+.rightDetails {
+  position: relative;
+  top: -100px;
+  left: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.instructions p:hover {
+  scale: 1.1;
+  cursor: pointer;
+  opacity: 1;
+}
+
+ #clearPlayer { 
+  position: absolute;
+  width: 15%;
+  top: 80px;
+  left: 8em;
+  z-index: 100;
+}
+
+
+.modal-header .modal-title {
+  margin-left: 6.5em;
+}
+
+/* input*/
+#name {
+  left: 1.9em;
   text-align: center;
 }
 
-#clearPlayer {
+.modal-dialog-centered .modal-content {
+  padding: 4em 2em;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+}
+
+.modal-header .close span {
+  font-size: 1.4em;
+  background-color: red;
+  border-radius: 50%;
+  padding: 3px 10px;
+  color: #fff;
   position: absolute;
-  top: 100px;
-  left: 830px;
+   top: -15px;
+  left: 476px; 
+  z-index: 100;
+}
+
+/* game info*/
+.gameInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* background: yellow; */
+  padding: 1em;
+  position: absolute;
+  width: 30%;
+  height: 50%;
+  top: 600px;
+  left: 462px;
+}
+
+.section {
+  position: absolute;
+  top: -1em;
 }
 
 #corWrong {
-  position: absolute;
-  left: 430px;
-  top: 600px;
+  position: relative;
+  left: -50px;
+  top: -19px;
   color: white;
-  font-size: 25px;
+  font-size: 1.3em;
+  width: 112%;
   margin: 5px 5px;
   padding: 3px;
-  width: 24%;
-  display: flex;
+  border-radius: 3px;
+   display: flex;
   flex-direction: row;
   justify-content: center;
   background-color: sandybrown;
 }
 
 .enemy {
-  left: 500px;
+  /* left: 500px;
   position: absolute;
   top:600px;
   color: white;
   /* background-color: sandybrown; */
-  width: 120px;
+  /* width: 120px;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 5px; */ 
+}
+
+.enemyContainer {
+  position: relative;
+  top: -35px;
 }
 
 #enemyLife {
   color: white;
   background-color: sandybrown;
-  position: absolute;
-  top: 62px;
-  left: 160px;
-border-radius: 5px;
-padding: 3px;
+  position: relative;
+  top: -68px;
+  font-size: 1.1em;
+  left: 85px;
+  border-radius: 5px;
+  padding: 3px;
 }
 .plife {
-  left: 500px;
-  position: absolute;
-  top:662px;
+  left: -44px;
+  position: relative;
+  width: 112%;
+  top: -24px;
   color: white;
-  /* background-color: sandybrown; */
-  width: 170px;
-  text-align: center;
+  background-color: sandybrown;
   border-radius: 5px;
   padding: 3px;
 }
@@ -418,7 +523,18 @@ padding: 3px;
 	border-radius: 0px;
 	text-decoration:none;
   outline:0!important;
-} */
+} 
+
+.footer {
+  position: relative;
+  min-width: 100vw;
+left: 0px;
+  margin-top: 44em;
+  bottom: -30em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
 
 /* unrelated styles */
 
