--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -3,7 +3,7 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-the-big-picture/blob/master/LICENSE)
  */
-body {
+.imgBg {
   background: url('../img/drop.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
